fixed some layout problems

--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,7 @@ a {
 	  justify-content: space-around;
 	/*   flex-direction:column; */
       align-items:flex-strech;
+	  
       
   }
   
@@ -68,12 +69,15 @@ a {
     justify-content: space-around;
 	/* flex-direction:column; */
     align-items:flex-strech;
+	
   }
   
   .container-1 div, .container-2 div, .container-3 div{
     border:1px #ccc solid;
     padding:10px;
-	margin:15px;
+	/* margin:15px; */
+	height:100%;
+	  width:100%;
   }
   
     
@@ -114,7 +118,7 @@ section {
  }
  #map {
 	 height: 400px;
-	 width: 75%;
+	 width: 90%;
   }
   
 
